# isrpo-labs

./: .gitignore  1 лаб.txt
LR2_CMake/2A/: CMakeLists.txt
LR2_CMake/2A/_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Lab2A.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
LR2_CMake/2A/_build/sample_lib/: cmake_install.cmake  sample_lib.vcxproj  sample_lib.vcxproj.filters
LR2_CMake/2A/_build/sample_lib/Debug/: sample_lib.lib
LR2_CMake/2A/_build/sample_lib/sample_lib.dir/Debug/sample_lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  sample_lib.lastbuildstate
LR2_CMake/2A/_build/sample_program/: cmake_install.cmake  sample_program.vcxproj  sample_program.vcxproj.filters
LR2_CMake/2A/_build/sample_program/sample_program.dir/Debug/: sample_program.exe.recipe  sample_program.ilk
LR2_CMake/2A/_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
LR2_CMake/2A/_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
LR2_CMake/2A/sample_lib/: CMakeLists.txt  sample_module.cpp  sample_module.h
LR2_CMake/2A/sample_program/: main.cpp
LR2_CMake/2C/: CMakeLists.txt
LR2_CMake/2D/: CMakeLists.txt
LR2_CMake/2D/app/: CMakeLists.txt  main.cpp
LR2_CMake/2D/libA/: CMakeLists.txt  libA.cpp  libA.h
LR2_CMake/2D/libB/: CMakeLists.txt  libB.cpp  libB.h
LR2_CMake/2D/libC/: CMakeLists.txt  libC.cpp  libC.h
(+17 files in other folders)
